Revision history for experimental

{{$NEXT}}

0.014     2015-09-12 00:29:37+02:00 Europe/Amsterdam
          Add bitwise to list of known features

0.013     2014-10-25 21:54:47+02:00 Europe/Amsterdam
          Rename lvalue_refs to refaliasing

0.012     2014-10-12 12:10:06+02:00 Europe/Amsterdam
          Added lvalue references feature

0.011     2014-09-27 14:08:47+02:00 Europe/Amsterdam
          Clarified which order to apply pragmas [Grant McLean]

0.010     2014-08-19 17:47:20+02:00 Europe/Amsterdam
          Add returning 1's to evals in tests

0.009     2014-08-16 13:43:53+02:00 Europe/Amsterdam
          Hardcode features for perl < 5.15.7

0.008     2014-07-05 13:58:28+02:00 Europe/Amsterdam
          Give better perl version formatting
          Fix smartmatch/switch description

0.007     2014-03-13 09:33:16CET+0100 Europe/Amsterdam
          Rewrote much of the documentation [Ricardo Signes, Karen Etheridge]

0.006     2014-01-17 00:14:29CET+0100 Europe/Amsterdam
          Hard require 5.010
          Support attaching additional features
          Add autoderef to grandfathered list for 5.14-5.18

0.005     2013-06-09 00:40:53 Europe/Amsterdam
          Grandfathered lexical_topic

0.004     2013-06-05 11:42:40 Europe/Amsterdam
          Give better error on legacy perls

0.003     2013-05-27 13:58:37 Europe/Amsterdam
          More fixing for older perl versions

0.002     2013-05-27 02:07:46 Europe/Amsterdam
          Fix grandfathering clause
          Added basic tests

0.001     2013-05-26 15:18:43 Europe/Amsterdam
          First release