@@ -1,6 +1,7 @@
 Revision history for experimental
 
 {{$NEXT}}
+          Make lexical_topic a deprecated feature
 
 0.014     2015-09-12 00:29:37+02:00 Europe/Amsterdam
           Add bitwise to list of known features
